--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,5 +1,6 @@
 @media (max-width: 1000px){
-    .header__content{
+    .header__content,
+    .header__contact{
         margin-left: 0;
     }
 }
@@ -9,7 +10,8 @@
     }
 }
 @media (max-width: 600px){
-    .header__content-title{
+    .header__content-title,
+    .header__contact-title{
         font-size: 34px;
         line-height: 50px;
     }
@@ -19,7 +21,8 @@
     }
 }
 @media (max-width: 500px){
-    .header__content-title{
+    .header__content-title,
+    .header__contact-title{
         font-size: 30px;
         line-height: 43px;
     }
@@ -31,6 +34,12 @@
     .header__content-subtitle{
         font-size: 20px;
         margin-bottom: 25px;
+    }
+    .header__contact-subtitle{
+        font-size: 20px;
+    }
+    .header__contact-span{
+        font-size: 20px;
     }
     .header__content-btn {
         width: 110px;
@@ -47,13 +56,14 @@
     }
 }
 @media (max-width: 400px){
-    .header__top {
-        margin-bottom: 100px;
+    .header__content {
+        margin-top: 100px;
     }
     .header__inner {
         padding: 25px 0 10px 0;
     }
-    .header__content-title{
+    .header__content-title,
+    .header__contact-title{
         font-size: 23px;
         line-height: 43px;
     }
@@ -68,10 +78,20 @@
     .header__content-text {
         margin-bottom: 79px; 
     }
+    .header__contact-text{
+        margin-bottom: 15px;
+    }
+    .header__contact-title{
+        margin-bottom: 5px;
+    }
+    .header__contact-input__name,
+    .header__contact-input__email,
+    .header__contact-input__email{
+        margin-bottom: 12px;
+    }
 }
 @media (max-width: 319px){
     .header__top-link {
         font-size: 11px;
-        color: #fff;
     }
 }
