--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -12,3 +12,7 @@
     font-family: 'Mont-Regular', sans-serif;
     font-weight: 400;
 }
+%mont-300{
+    font-family: 'Mont-Light', sans-serif;
+    font-weight: 300;
+}
